--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-13>
+#+DATE: Time-stamp: <2015-07-14>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -17,13 +17,14 @@
 #+title: News and History of ANSYS-Mode
 
 Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
-** Version 16.1.2
+** Version 16.1.2, Not yet released
    - Realised sending code to the ANYSClassics GUI as well.
 
    - Reorganised and simplified the installation and configuration.
 
    - The command `C-c C-j' does now recognise blocks, which is to say
-     it copies or sends complete logical blocks
+     it copies or sends complete logical blocks to the interpreter
+     instead of only this code line.
 
 ** Version 16.1.1 July 2015
    - The command `ansys-show-command-parameters' (M-?) does
