--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-13>
+#+DATE: Time-stamp: <2015-07-14>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -27,11 +27,11 @@
    - C-c C-a does not align a pragraph if the mark was not set (first
       time file visit)!!!!!
 ** Wish-list
+   - Licensing initialisation
    - Documentation of installation and configuration!
-   - C-c C-j checking and chewing blocks
    - C-c C-c checking blocks
    - MinGWin: FindWindow +  ActivateWin + SendKeys?
-   - include the ../ansys/matlib
+   - include ../ansys/apdl?
    - ../apdl/start161.ans
    - make version numbers string into integers
    - add screw thread capability to WB translation
