--- a/NEWS.org
+++ b/NEWS.org
@@ -17,7 +17,7 @@
 #+title: News and History of ANSYS-Mode
 
 Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
-** Version 16.1.2, Not yet released
+** Version 16.1.2, not yet released, targeted for August 2015
    - Realised sending code to the ANYSClassics GUI as well.
 
    - Checking fast the available licenses (with "C-c C-l") is now also
@@ -25,9 +25,13 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
    - Reorganised and simplified the installation and configuration.
 
-   - The command `C-c C-j' does now recognise blocks, which is to say
-     it copies or sends complete logical blocks to the interpreter
-     instead of only this code line.
+   - Reorganised the menu items, separated general ANSYS tasks from
+     the APDL coding with two main menu Entries: A-Mode and ANSYS
+
+   - The command `C-c C-j' does now recognise blocks (APDL loops and
+     control structures), which is to say it copies or sends complete
+     logical blocks to the interpreter instead of only the current
+     code line.
 
 ** Version 16.1.1 July 2015
    - The command `ansys-show-command-parameters' (M-?) does
